<resources>
    <string name="title">Eth Gas Price (GWei)</string>
    <string name="app_name">DeFarmer</string>
    <string name="rapid_15_s">rapid | 15 s</string>
    <string name="fast_1_m">fast | 1 m</string>
    <string name="standard_3_m">standard | 3 m</string>
    <string name="slow_10_m"><![CDATA[slow | >10 m]]></string>
    <string name="refresh">refresh</string>
    <string name="refreshing">refreshing</string>
    <string name="updating">updating</string>
    <string name="retry">retry</string>
    <string name="cost_of_transactions">Cost of Defi Transactions</string>
    <string name="gas_price_gwei">Gas Price (GWei)</string>
    <string name="eth_price_now">Eth Price Now</string>
    <string name="slogan">A Tool for Defi Farmers</string>
    <string name="data_source">Data Source</string>
    <string name="feedback">Feedback</string>
    <string name="buy_me_a_coffee">Buy Me a Coffee</string>
    <string name="data_source_text">The data is provided by SparkPool (gasnow.org).</string>
    <string name="feedback_text">Any questions and advices, please email me ( themailfromw@gmail.com ).</string>
    <string name="buy_me_a_coffee_text">Any coins are appreciated!</string>
    <string name="find_new_version">Find New Version</string>
    <string name="downloading">Downloading</string>
    <string name="update_now_btn">Update Now</string>
    <string name="release_note">Release Note</string>
</resources>