<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="50dp"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_logo" />

            <LinearLayout
                android:layout_marginLeft="10dp"

                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:textColor="@color/light_gray"
                    android:textSize="12sp"
                    android:text="@string/slogan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textStyle="bold"
            android:text="@string/data_source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginBottom="10dp"
            android:text="The Data is provided by SparkPool (gasnow.org)."
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textStyle="bold"
            android:text="@string/feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginBottom="10dp"
            android:text="Any questions and advices, please email me ( themailfromw@gmail.com )."
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textStyle="bold"
            android:text="@string/buy_me_a_coffee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="Any coins are appreciated!"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />





    </LinearLayout>

</LinearLayout>