<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="gasNow"
            type="cn.chingshen.gasless.domain.vos.GasNow" />

        <variable
            name="ethPrice"
            type="cn.chingshen.gasless.domain.vos.EthPrice" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/activity_background"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="50dp"
            android:gravity="center_vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_logo" />

                <LinearLayout
                    android:layout_marginLeft="10dp"

                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:textColor="@color/light_gray"
                        android:textSize="12sp"
                        android:text="@string/slogan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text='@{"$"+ethPrice.usd}'
                    android:textSize="16sp" />

                <TextView
                    android:textColor="@color/light_gray"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eth_price_now"
                    android:textSize="10sp" />
            </LinearLayout>
        </LinearLayout>

        <include
            android:id="@+id/gas_prices"
            layout="@layout/layout_gas_price_appwidget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            bind:gasNow="@{gasNow}" />

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:background="@drawable/shape_widget_background"
            android:orientation="vertical"
            android:paddingVertical="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cost_of_transactions"
                    android:textColor="@color/gray"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="16sp"
                    android:layout_height="16sp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/refresh"
                    android:src="@drawable/ic_refresh" />

                <TextView
                    android:id="@+id/usdt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="USDT"
                    android:textColor="@color/gray"
                    android:textSize="12sp" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/dapps_recycle_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="10"
                tools:listitem="@layout/item_dapp" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/bottom"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal|center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/light_gray"
                android:textSize="12sp"
                android:text="@string/data_source"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <View
                android:id="@+id/divider2"
                android:layout_width="1dp"
                android:layout_height="10dp"
                android:layout_marginHorizontal="5dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:textColor="@color/light_gray"
                android:textSize="12sp"
                android:text="@string/feedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <View
                android:layout_marginHorizontal="5dp"

                android:id="@+id/divider3"
                android:layout_width="1dp"
                android:layout_height="10dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:textColor="@color/light_gray"
                android:textSize="12sp"
                android:text="@string/buy_me_a_coffee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>
</layout>