<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:background="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="133.5dp"
            android:background="@drawable/dialog_bg"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:text="@string/find_new_version"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.8"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                tools:text="V1.2.0" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:layout_marginTop="5dp"
            android:text="@string/release_note"
            android:textColor="#2D2C2C" />

        <TextView
            android:id="@+id/update_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="23dp"
            android:lineSpacingExtra="10dp"
            android:textColor="#2D2C2C" />

        <TextView
            android:id="@id/versionchecklib_version_dialog_commit"
            android:layout_width="250dp"
            android:layout_height="39dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="20dp"
            android:background="@color/blue"
            android:gravity="center"
            android:text="@string/update_now_btn"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:orientation="vertical">

        <ImageView
            android:id="@id/versionchecklib_version_dialog_cancel"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:src="@drawable/ic_close" />
    </LinearLayout>
</LinearLayout>